fix spacing in header

--- a/src/components/Settings/Settings.module.css
+++ b/src/components/Settings/Settings.module.css
@@ -69,6 +69,7 @@
 .header {
   display: flex;
   align-items: center;
+  margin-bottom: 0.5rem;
 }
 
 .title {
